# 2025_20552722

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet3/: calc.cpp
Worksheet3/adderstatic/include/: adder.h
Worksheet4/calc/: CMakeLists.txt  calc.cpp
Worksheet4/hello_cmake/: hello.cpp
Worksheet5/: Doxyfile  adder.cpp  adder.h  calc.cpp
